Prevent distortion of skills chart in Safari

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -47,7 +47,7 @@ img {
 
 .experience-ahp { padding: 2.7rem 0 0 2rem; }
 .education-bu { padding: 0.5rem 0 0 3.8rem; }
-.skills-chart img { width: 87%; }
+.skills-chart img { max-width: 87%; }
 
 .portfolio a > div {
   align-items: center;
